家电售后服务系统

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -66,7 +66,10 @@
                     android:id="@+id/publishRL"
                     android:layout_alignParentBottom="true"
                     android:layout_width="match_parent"
-                    android:layout_margin="3dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
                     android:background="@drawable/rounded_rectangle_border"
                     android:layout_height="wrap_content">
 
