--- a/app/src/main/res/layout/item_msg.xml
+++ b/app/src/main/res/layout/item_msg.xml
@@ -7,6 +7,7 @@
             android:id="@+id/name"
             android:text="姓名："
             android:padding="2dp"
+            android:layout_alignParentTop="true"
             android:textColor="@color/colorPrimary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
@@ -15,6 +16,7 @@
             android:id="@+id/msg"
             android:text="留言内容"
             android:padding="2dp"
+            android:layout_marginTop="5dp"
             android:layout_toRightOf="@id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
